--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -1,23 +1,48 @@
 .container {
-    padding-top: 20px;
-  }
-  
-  h1 {
-    font-family: "Dosis", sans-serif;
-    color: rgb(233, 69, 96);
-    font-weight: normal;
-  }
-  
-  p {
-      color: white;
-      font-family: "Dosis", sans-serif;
-      font-size: 18px;
-  }
+  padding-top: 20px;
+}
 
-  #highlight-red {
-    color: rgb(233, 69, 96);
-  }
+.header-container {
+  padding-right: 80%;
+  padding-bottom: 2rem;
+}
 
-  #highlight-blue {
-   color: rgb(182, 225, 246)
-  }
+.info-container {
+  display: flex;
+}
+
+.text-container {
+  width: 50%;
+}
+
+.img-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  max-width: 466px;
+  width: 55%;
+  border-radius: 20%;
+}
+
+h1 {
+  font-family: "Dosis", sans-serif;
+  color: rgb(233, 69, 96);
+  font-weight: normal;
+}
+
+p {
+  color: white;
+  font-family: "Dosis", sans-serif;
+  font-size: 18px;
+}
+
+#highlight-red {
+  color: rgb(233, 69, 96);
+}
+
+#highlight-blue {
+  color: rgb(182, 225, 246);
+}
