--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -2,6 +2,11 @@
   padding-top: 20px;
 }
 
+.header-container {
+  padding-right: 80%;
+  padding-bottom: 2rem;
+}
+
 h1 {
   font-family: "Dosis", sans-serif;
   color: rgb(233, 69, 96);
@@ -9,11 +14,7 @@ h1 {
 }
 
 p {
-    color: white;
-    font-family: "Dosis", sans-serif;
-    font-size: 18px;
+  color: white;
+  font-family: "Dosis", sans-serif;
+  font-size: 18px;
 }
-
-
-
-
